# apptitude

./: .env  .gitignore  app_cache.py  db.py  linkedinScrapper.py  main.py  models.py  multifator_auth_test.py  pyproject.toml  test.html  test.py  utils.py
frontend/: package.json
frontend/src/: frontend.tsx
frontend/src/components/ui/: UploadResume.tsx  request_button.tsx  useInput.tsx
routes/: auth.py  questions.py  rag.py  resume.py  storage.json
routes/frontend/src/: App.tsx
routes/frontend/src/components/ui/: UploadResume.tsx  login.tsx  quizDetails.tsx  register.tsx  request_button.tsx
